--- a/style.css
+++ b/style.css
@@ -18,3 +18,24 @@
   width: 1280px;
   height: 100%;
 }
+
+.cards {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.card {
+  width: 300px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 25px;
+  background: hsla(0, 100%, 100%, .1);
+}
+
+.icon {
+  width: 60px;
+}
